--- a/swift-cloud-tutorial/doc/README
+++ b/swift-cloud-tutorial/doc/README
@@ -49,7 +49,7 @@ Run the following commands to extract these tutorial scripts. [red]#<fix?>#
 wget https://github.com/yadudoc/swift-on-cloud/archive/master.zip
 unzip master.zip
 mv swift-on-cloud-master swift-on-cloud
-cd swift-on-cloud
+cd swift-on-cloud/swift-cloud-tutorial
 -----
 ////
 $ cd $HOME
