--- a/swift-cloud-tutorial/doc/README
+++ b/swift-cloud-tutorial/doc/README
@@ -39,7 +39,7 @@ Swift installation
 ------------------
 1. Download the file by running "wget http://swiftlang.org/packages/swift-0.95-RC6.tar.gz"
 2. Extract by running "tar xfz swift-0.95-RC6.tar.gz"
-3. Add to PATH by running "export PATH=$PATH:/path/to/swift-0.95-RC6/bin"
+3. Add to PATH by running "export PATH=/path/to/swift-0.95-RC6/bin:$PATH"
 
 Tutorial scripts installation
 -----------------------------
